_experimental/tests/error_cases.out
3
"hello world"
Runtime error: Runtime error: Undefined variable: undefined-function
  at line 1, column 1
  | ;; Test cases for errors and edge cases
  | ^

Stack trace:
  0: at IP 1 (line 1, col 1)

Runtime error: Runtime error: + expects numbers, got string

